--- a/src/app/content/css/shape-sorter.css
+++ b/src/app/content/css/shape-sorter.css
@@ -27,6 +27,47 @@
     margin: 4px
 }
 
+.diamond-holder-pallete .red {
+    background: #E74C3C;
+}
+
+ .diamond-holder-pallete .blue {
+    background: #81CFE0;
+}
+
+.diamond-holder-pallete .green {
+    background: #66CC99;
+}
+
+ .diamond-holder-pallete .black {
+    background: #4D4D4D;
+}
+
+.diamond-holder-pallete .red {
+    margin-bottom: 0;
+}
+
+.diamond-holder .diamond{
+    transform: rotate(0deg);
+}
+
+.diamond-holder-pallet .blue {
+    margin-left: 0;
+    margin-bottom: 0;
+}
+
+.diamond .black {
+    margin-left: 0;
+}
+
+
+
+
+
+
+
+
+
 @keyframes insert-diamond {
     from {
         opacity: 1;
