--- a/src/app/content/css/diamond-animation.css
+++ b/src/app/content/css/diamond-animation.css
@@ -43,7 +43,12 @@
 }
 
 .success {
-    animation: wrapper-success;
+    animation: success;
+    animation-duration: 2s;
+}
+
+.success-toggle {
+    animation: success-toggle;
     animation-duration: 2s;
 }
 
@@ -118,7 +123,13 @@
     }
 }
 
-@keyframes wrapper-success {
+@keyframes success {
+    to {
+        background: green;
+    }
+}
+
+@keyframes success-toggle {
     to {
         background: green;
     }
