--- a/src/app/content/css/main.css
+++ b/src/app/content/css/main.css
@@ -27,3 +27,10 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+.center-page-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 99vh;
+}
