--- a/src/app/content/css/carousel.css
+++ b/src/app/content/css/carousel.css
@@ -1,3 +1,7 @@
+.carousel{
+    height: 217px;
+}
+
 .fade-wrapper {
     position: relative;
     width: 80%;
@@ -54,9 +58,29 @@
     scroll-snap-align: end;
 }
 
-@media (min-width: 576px) {}
 
-@media (min-width: 768px) {}
+.carousel::-webkit-scrollbar {
+    width: 14px;
+    height: 18px;
+    }
+    .carousel::-webkit-scrollbar-thumb {
+    height: 6px;
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    -webkit-border-radius: 7px;
+    background-color: rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px
+    1px 0px rgba(0, 0, 0, 0.05);
+    }
+    .carousel::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;
+    }
+    .carousel::-webkit-scrollbar-corner {
+    background-color: transparent;
+    }
+
 
 @media (min-width: 992px) {
     .carousel {
