Creating Experiments selection page

--- a/src/app/content/css/main.css
+++ b/src/app/content/css/main.css
@@ -37,8 +37,17 @@ body {
     height: 99vh;
 }
 
+.content-wrapper {
+    max-width: 980px;
+    margin: 0 auto;
+    padding: 32px 20px;
+}
+
 @media(max-width:767px) {
     body {
         font-size: 16px;
+    }
+    .content-wrapper {
+        padding: 16px 20px;
     }
 }
