--- a/src/app/content/css/nav.css
+++ b/src/app/content/css/nav.css
@@ -10,7 +10,7 @@
 }
 
 .nav-bar li {
-    padding: 0 20px;
+    padding: 0 14px;
 }
 
 .nav-bar li:hover a {
@@ -40,14 +40,48 @@
     height: 67px;
     width: 67px;
     margin-top: 54px;
+    transition: 1.5s;
+    transform: rotate(45deg);
 }
 
 .nav-bar .diamond-nav:hover {
-    background: #66CC99;
-    transition: 0.5s;
+    cursor: pointer;
+    animation: spin;
+    transition: 1.5s;
+    transform: rotate(225deg);
 }
 
 .nav-bar .diamond-nav .diamond {
     width: 26px;
     height: 26px;
+}
+
+@media(max-width:767px) {
+    .nav-bar {
+        height: 40px;
+        align-items: center;
+    }
+    .nav-bar li:first-child {
+        width: 80px;
+    }
+    .nav-bar li {
+        padding: 0px 8px;
+    }
+    .nav-bar .diamond-nav {
+        height: 45px;
+        width: 45px;
+        margin-top: 39px;
+    }
+    .nav-bar .diamond-nav .diamond {
+        width: 18px;
+        height: 18px;
+        margin: 3px;
+    }
+    .nav-bar .diamond-nav .diamond:nth-child(2) {
+        margin-left: 0;
+        margin-bottom: 0;
+    }
+    .nav-bar .diamond-nav .diamond:last-child {
+        margin-left: 0;
+    }
 }
