--- a/src/app/content/css/diamond.css
+++ b/src/app/content/css/diamond.css
@@ -8,9 +8,9 @@
 }
 
 .diamond {
-    height: 130px;
-    width: 130px;
-    margin: 5px;
+    height: 47%;
+    width: 47%;
+    margin: 2%;
     opacity: 1;
     filter: brightness(100%);
     transform: rotate(45deg);
@@ -53,9 +53,5 @@
     .diamond-holder {
         height: 200px;
         width: 200px;
-    }
-    .diamond-holder .diamond {
-        height: 92px;
-        width: 92px;
     }
 }
