--- a/src/app/content/css/board-game.css
+++ b/src/app/content/css/board-game.css
@@ -1,4 +1,4 @@
-.board{
+.board {
     border-radius: 5px;
     background: white;
     border: 20px solid white;
@@ -23,6 +23,9 @@
     border-radius: 20%;
     width: 90px;
     height: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .tile-icon.fire {
@@ -37,16 +40,61 @@
     background-color: #e4f1fe;
 }
 
+.tile-icon.rock {
+    background-color: brown;
+}
+
+.tile-icon.town {
+    background-color: silver;
+}
+
+.tile-icon.plant {
+    background-color: green;
+}
+
+.tile-icon.glass {
+    background-color: silver;
+}
+
+.tile-icon.wood {
+    background-color: brown;
+}
+
+.tile-icon.lava {
+    background-color: red;
+}
+
+.tile-icon.obsidian {
+    background-color: black;
+    color: white;
+}
+
+.tile-icon.sand {
+    background-color: yellow;
+}
+
+.tile-icon.earth {
+    background-color: brown;
+}
+
+.tile-icon.mud {
+    background-color: brown;
+}
+
+.tile-icon.seed {
+    background-color: coral;
+}
+
 .tile-bag {
     background-color: #6495ed;
-    width: 330px;
+    width: 550px;
     border-radius: 6px;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-content: space-between;
     position: absolute;
-    height: 110px;
     bottom: 118px;
+    flex-wrap: wrap;
 }
 
 .tile-bag:after {
