--- a/src/app/content/css/board-game.css
+++ b/src/app/content/css/board-game.css
@@ -32,7 +32,7 @@
     background-color: #f22613;
 }
 
-.tile-icon.water {
+.tile-icon.water-tile {
     background-color: #19b5fe;
 }
 
@@ -48,7 +48,7 @@
     background-color: silver;
 }
 
-.tile-icon.plant {
+.tile-icon.plant-tile {
     background-color: green;
 }
 
@@ -85,15 +85,15 @@
     background-color: coral;
 }
 
-.tile-icon.soil {
+.tile-icon.soil-tile {
     background-color: brown;
 }
 
-tile-icon.seed {
+.tile-icon.seed-tile {
     background-color: yellow;
 }
 
-.tile-icon.soilSeed {
+.tile-icon.sowed-soil-tile {
     background-color: coral;
 }
 
@@ -101,11 +101,11 @@ tile-icon.seed {
     background-color: green;
 }
 
-.tile-icon.plant {
+.tile-icon.plant-tile {
     background-color: greenyellow;
 }
 
-.tile-icon.wetSoil {
+.tile-icon.wet-soil-tile {
     background-color: rgb(80, 29, 29);
     color:white;
 }
