--- a/src/app/content/css/board-game.css
+++ b/src/app/content/css/board-game.css
@@ -1,90 +1,41 @@
+.board-game-wrapper{
+    height: calc(100vw -20px);
+    width: calc(100vw -20px);
+    max-width: 500px;
+    max-height: 500px;
+}
+
 .board {
-    border-radius: 5px;
-    background: white;
-    border: 20px solid white;
+    width: 100%;
+height: 100%;
+display: flex;
+flex-direction: column;
 }
 
 .board .board-row {
     display: flex;
+    flex: 1;
+    position: relative;
 }
 
 .board .board-cell {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
-    width: 100px;
-    border: 2px solid black;
-    position: relative;
-    border-radius: 5px;
+    flex: 1;
+    border-radius: 10px;
+    background-color: white;
+    margin: 2px;
 }
 
 .tile-icon {
-    border-radius: 20%;
-    width: 90px;
-    height: 90px;
+    height: 100%;
+    width:100%;
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.tile-icon.soil-tile {
-    background-color: brown;
-}
-
-
-.tile-icon.seed-tile {
-    background-color: yellow;
-}
-
-.tile-icon.seed-tile-fire {
-    background-color: red;
-}
-
-.tile-icon.plant-tile-sprout {
-    background-color: greenyellow;
-}
-
-.tile-icon.plant-tile-budding {
-    background-color: green;
-}
-
-.tile-icon.plant-tile {
-    background-color: greenyellow;
-}
-
-.tile-icon.weed-tile-seedling {
-    background-color: goldenrod;
-}
-
-.tile-icon.weed-tile-sprout {
-    background-color: greenyellow;
-}
-
-.tile-icon.weed-tile-budding {
-    background-color: green;
-}
-
-.tile-icon.weed-tile-fullyGrown {
-    background-color: red;
-}
-
-.tile-icon.rock-tile {
-    background-color: gray;
-}
-
-.tile-icon.wet-soil-tile {
-    background-color: rgb(80, 29, 29);
-    color: white;
-}
-
-.tile-icon.wilted-plant-tile {
-    background-color: rosybrown;
-}
-
-.tile-icon.dead-plant-tile {
-    background-color: black;
-    color: white;
+    text-align: center;
 }
 
 .tile-icon.nested-tile {
@@ -92,63 +43,106 @@
     height: 80%;
 }
 
+.tile-icon.water-tile {
+    background-color: #22a7f0;
+}
+
+.tile-icon.soil-tile {
+    background-color: #c0392b;
+}
+
+.tile-icon.soil-tile-wet {
+    background-color:#96281b;
+    color: white;
+}
+
+.tile-icon.seed-tile {
+    background-color: #fad859;
+}
+
+.tile-icon.seed-tile-fire {
+    background-color: #cf000f;
+}
+
+.tile-icon.plant-tile-sprout-fire {
+    background-color: #e74c3c;
+}
+
+.tile-icon.plant-tile-budding-fire {
+    background-color: #d91e18;
+}
+
+.tile-icon.plant-tile-fire {
+    background-color: #cf000f;
+}
+
+.tile-icon.plant-tile-sprout {
+    background-color: #1e824c;
+}
+
+.tile-icon.plant-tile-budding {
+    background-color: #87d37c;
+}
+
+.tile-icon.plant-tile {
+    background-color: #2ecc71;
+}
+
+.tile-icon.weed-tile-seedling {
+    background-color: #049372;
+}
+
+.tile-icon.weed-tile-sprout {
+    background-color: #019875;
+}
+
+.tile-icon.weed-tile-budding {
+    background-color: #03a678;
+}
+
+.tile-icon.weed-tile-fullyGrown {
+    background-color: #1e824c;
+}
+
+.tile-icon.rock-tile {
+    background-color: #bdc3c7;
+}
+
+.tile-icon.wilted-plant-tile {
+    background-color: #91b496;
+}
+
+.tile-icon.dead-plant-tile {
+    background-color: #2e3131;
+    color: white;
+}
+
 .tile-bag {
     background-color: #6495ed;
-    width: 550px;
+    width: calc(100vw - 20px);
+    height: 100px;
+    max-width: 500px;
     border-radius: 6px;
     display: flex;
-    justify-content: space-evenly;
-    align-content: space-between;
-    position: absolute;
-    bottom: 118px;
-    flex-wrap: wrap;
-}
-
-.tile-bag:after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -19px;
-    width: 0;
-    height: 0;
-    border-top: 70px solid #6495ed;
-    border-left: 18px solid transparent;
-    border-right: 18px solid transparent;
+    justify-items: space-between;
+    flex:1;
 }
 
 .tile-bag .tile-icon {
-    width: 98px;
-    height: 98px;
+    height: initial;
+    width: initial;
+    flex:  1;
+    margin: 2px;
 }
 
+@media (max-width: 992px) {
+    .tile-bag {
+  
+        height: 20vw;
+    }
 
-/* .tile-bag {
-    background-color: cornflowerblue;
-    width: 250px;
-    border-radius: 6px;
-    padding: 20px 20px 20px 20px;
-    margin: 0 auto;
+    .tile-bag .tile-icon{
+       height: 100%;
+       flex: 1;
+    }
 }
-
-.tile-bag h2 {
-    margin: 0;
-}
-
-.tile-bag .tile-row {
-    display: flex;
-    justify-content: space-around;
-    align-content: space-between;
-}
-
-.tile-bag .tile-icon {
-    height: 50px;
-    width: 50px;
-    margin: 5px 5px 5px 0;
-}
-
-.tile-bag .tile-description {
-    flex: 2;
-    margin: 5px;
-    font-size: 14px;
-} */
