--- a/src/app/content/css/main.css
+++ b/src/app/content/css/main.css
@@ -14,6 +14,10 @@ body {
     font-size: 18px;
 }
 
+.hidden{
+    visibility: hidden;
+}
+
 .full-page-fex-col-wrapper {
     display: flex;
     flex-direction: column;
