--- a/src/app/content/css/main.css
+++ b/src/app/content/css/main.css
@@ -28,6 +28,10 @@ body {
     position: relative;
 }
 
+.center{
+    margin: 0 auto;
+}
+
 .center-wrapper {
     display: flex;
     align-items: center;
@@ -52,9 +56,50 @@ body {
     padding: 32px 20px;
 }
 
+.space-between-wrapper{
+    display: flex;
+    justify-content: space-between;
+}
+
 .padding-gapper-2 {
     padding: 80px;
 }
+
+.experiment-button{
+    background-color:#81cfe0;
+    color:#FFFFFF;
+    border-radius: 2px;
+    border: 1px solid transparent;
+    user-select: none;
+    font-size: 16px;
+    padding: 10px 12px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.experiment-button:hover {
+    background-color:#6caab8;
+  }
+
+  .experiment-button:hover {
+    background-color:#6caab8;
+  }
+  
+.confirm-button{
+   background-color:#6c9;
+}
+
+.cancel-button{
+    background-color:#e74c3c;
+ }
+
+ .confirm-button:hover {
+    background-color:#4e8f6e;
+  }
+ 
+ .cancel-button:hover {
+    background-color:#b94133;
+  }
 
 @media(max-width:767px) {
     body {
