Creating help page

--- a/src/app/content/css/board-game.css
+++ b/src/app/content/css/board-game.css
@@ -1,6 +1,5 @@
 .board-game{
     margin-top: 48px;  
-    position: relative; 
 }
 
 .board-game-wrapper{
@@ -10,10 +9,16 @@
     max-height: 500px;
 }
 
-.score{
+.score-row{
     width: calc(100vw -20px);
     max-width: 500px;
     align-items: center;
+    margin-bottom: 10px;
+    
+}
+
+.score{
+    font-size: 20px;
 }
 
 .board-game-wrapper .confirm-buttons-wrapper{
@@ -194,14 +199,60 @@
     transition: 0.5s;
 }
 
-.board-game .help-page{
-    
+ .help-page{
+   position: absolute;
+   top:0;
+   left: 0;
+   width: calc(100vw - (100vw - 100%));
+   min-height: 100vh;
+   z-index: 1000;
+   background-color: #6c9;
+   padding: 0 20px;
 }
+
+.help-page .help-page-content{
+    max-width: 650px;
+    margin: 0 auto;
+}
+
+.help-page .close{
+    position: fixed;
+    right: 14px;
+ }
+
+ .help-page .heading{
+    align-items: center;
+}
+
+ .help-page .rules-img{
+    width:100%;
+    max-width:330px;
+    margin-top: 1em;
+}
+
+.help-page section h3:first-of-type, .help-page section h2:first-of-type{
+    margin-top: 1.5em;
+}
+
+.help-page section h3.selecting-a-cell-heading{
+    margin-top: 1em;
+}
+
 
 @media(max-width:991px) {
 
+    .help-page{
+        position: absolute;
+        top:0;
+        left: 0;
+        width: calc(100vw - (100vw - 100%));
+        min-height: 100vh;
+     }
+
+
+
     @media only screen and (orientation:landscape) {
-        .score{
+        .score-row{
             width: calc(50vw -20px);
         }
         .board-game{
