--- a/src/app/content/css/board-game.css
+++ b/src/app/content/css/board-game.css
@@ -1,273 +1,323 @@
-.board-game{
-    margin-top: 48px;  
-}
-
-.board-game-wrapper{
-    height: calc(100vw -20px);
-    width: calc(100vw -20px);
-    max-width: 500px;
-    max-height: 500px;
-}
-
-.score-row{
-    width: calc(100vw -20px);
-    max-width: 500px;
-    align-items: center;
-    margin-bottom: 10px;
+    .board-game {
+        margin-top: 18px;
+    }
     
-}
-
-.score{
-    font-size: 20px;
-}
-
-.board-game-wrapper .confirm-buttons-wrapper{
-    display: flex;
-    justify-content: space-between;
-}
-
-.board-game-wrapper .confirm-buttons-wrapper .experiment-button{
-    width:100%;
-    margin: 5px;
-}
-
-.board {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.board .board-row {
-    display: flex;
-    flex: 1;
-}
-
-.board .board-cell {
-    display: flex;
-    flex: 1;
-    border-radius: 5px;
-    background-color: white;
-    margin: 2px;
-}
-
-.board .board-cell .selected-tile {
-    border: 2px solid #22a7f0;
-}
-
-.tile-icon {
-    flex:1;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    cursor: pointer;
-}
-
-.tile-icon:hover{
-    border: 2px solid #22a7f0;
-}
-
-.tile-icon.nested-tile {
-    flex: 0 0 80%;
-    height: 80%;
-}
-
-.tile-icon.water-tile {
-    background-color: #22a7f0;
-}
-
-.tile-icon.soil-tile {
-    background-color: #c0392b;
-}
-
-.tile-icon.soil-tile-wet {
-    background-color:#96281b;
-    color: white;
-}
-
-.tile-icon.seed-tile {
-    background-color: #fad859;
-}
-
-.tile-icon.seed-tile-fire {
-    background-color: #cf000f;
-}
-
-.tile-icon.plant-tile-sprout-fire {
-    background-color: #e74c3c;
-}
-
-.tile-icon.plant-tile-budding-fire {
-    background-color: #d91e18;
-}
-
-.tile-icon.plant-tile-fire {
-    background-color: #cf000f;
-}
-
-.tile-icon.plant-tile-sprout {
-    background-color: #1e824c;
-}
-
-.tile-icon.plant-tile-budding {
-    background-color: #87d37c;
-}
-
-.tile-icon.plant-tile {
-    background-color: #2ecc71;
-}
-
-.tile-icon.weed-tile-seedling {
-    background-color: #049372;
-}
-
-.tile-icon.weed-tile-sprout {
-    background-color: #019875;
-}
-
-.tile-icon.weed-tile-budding {
-    background-color: #03a678;
-}
-
-.tile-icon.weed-tile-fullyGrown {
-    background-color: #1e824c;
-}
-
-.tile-icon.rock-tile {
-    background-color: #bdc3c7;
-}
-
-.tile-icon.wilted-plant-tile {
-    background-color: #91b496;
-}
-
-.tile-icon.dead-plant-tile {
-    background-color: #2e3131;
-    color: white;
-}
-
-
-.tile-bag {
-    background-color: #2e3131;
-    border-radius: 5px;
-    display: flex;
-    flex-wrap: wrap;
-    width: calc(100vw -20px);
-    max-width: 500px;
-}
-
-.tile-bag .square{
-    position: relative;
-    flex-basis: calc(20% - 10px);
-    margin: 5px;
-    border: 1px solid;
-    box-sizing: border-box;
-}
-
-.tile-bag .square::before {
-    content: '';
-    display: block;
-    padding-top: 100%;
-  }
-  
-  .tile-bag .square .tile-icon {
-    position: absolute;
-    top: 0; left: 0;
-    height: 100%;
-    width: 100%;
-  }
-
-  .board-game .help-icon{
-      background: #4d4d4d;
-      color: white;
-      height: 32px;
-      width: 32px;
-      font-size: 18px;
-      font-weight: 400;
-      border-radius: 50%;
-      padding: 8px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-  }
-
-  .board-game .help-icon:hover{
-    background: #2e2e2e;
-    transition: 0.5s;
-}
-
- .help-page{
-   position: absolute;
-   top:0;
-   left: 0;
-   width: calc(100vw - (100vw - 100%));
-   min-height: 100vh;
-   z-index: 1000;
-   background-color: #6c9;
-   padding: 0 20px;
-}
-
-.help-page .help-page-content{
-    max-width: 650px;
-    margin: 0 auto;
-}
-
-.help-page .close{
-    position: fixed;
-    right: 14px;
- }
-
- .help-page .heading{
-    align-items: center;
-}
-
- .help-page .rules-img{
-    width:100%;
-    max-width:330px;
-    margin-top: 1em;
-}
-
-.help-page section h3:first-of-type, .help-page section h2:first-of-type{
-    margin-top: 1.5em;
-}
-
-.help-page section h3.selecting-a-cell-heading{
-    margin-top: 1em;
-}
-
-
-@media(max-width:991px) {
-
-    .help-page{
+    .score-row {
+        width: calc(75vw);
+        max-width: 400px;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+    
+    .score {
+        font-size: 20px;
+    }
+    
+    .board-game-wrapper .confirm-buttons-wrapper {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .board-game-wrapper .confirm-buttons-wrapper .experiment-button {
+        width: 100%;
+        margin: 5px;
+    }
+    
+    .board {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .board .board-row {
+        display: flex;
+        flex: 1;
+    }
+    
+    .board .board-cell {
+        display: flex;
+        flex: 1;
+        border-radius: 5px;
+        background-color: white;
+        margin: 2px;
+    }
+    
+    .board .board-cell .selected-tile {
+        border: 2px solid #22a7f0;
+    }
+    
+    .tile-icon {
+        flex: 1;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        cursor: pointer;
+    }
+    
+    .tile-icon:hover {
+        border: 2px solid #22a7f0;
+    }
+    
+    .board-game-wrapper .tile-icon {
+        transition: 2s;
+    }
+    
+    .tile-icon .nested-tile {
+        width: 0;
+        height: 0;
+    }
+    
+    .tile-icon .nested-tile {
+        transition: 1s ease-in-out;
+        flex: 0 0 90%;
+        height: 90%;
+    }
+    
+    .tile-icon .nested-tile:hover {
+        border: none;
+    }
+    
+    .tile-icon.water-tile {
+        background-color: #22a7f0;
+    }
+    
+    .tile-icon.soil-tile {
+        background-color: #c0392b;
+    }
+    
+    .tile-icon.soil-tile-wet {
+        background-color: #96281b;
+    }
+    
+    .tile-icon.seed-tile {
+        background-color: #fad859;
+    }
+    
+    .tile-icon.seed-tile-fire {
+        background-color: #cf000f;
+    }
+    
+    .tile-icon.plant-tile-sprout-fire {
+        background-color: #e74c3c;
+    }
+    
+    .tile-icon.plant-tile-budding-fire {
+        background-color: #d91e18;
+    }
+    
+    .tile-icon.plant-tile-fire {
+        background-color: #cf000f;
+    }
+    
+    .tile-icon.plant-tile-sprout {
+        background-color: #1e824c;
+    }
+    
+    .tile-icon.plant-tile-budding {
+        background-color: #87d37c;
+    }
+    
+    .tile-icon.plant-tile {
+        background-color: #2ecc71;
+    }
+    
+    .tile-icon.weed-tile-seedling {
+        background-color: #049372;
+    }
+    
+    .tile-icon.weed-tile-sprout {
+        background-color: #019875;
+    }
+    
+    .tile-icon.weed-tile-budding {
+        background-color: #03a678;
+    }
+    
+    .tile-icon.weed-tile-fullyGrown {
+        background-color: #1e824c;
+    }
+    
+    .tile-icon.rock-tile {
+        background-color: #bdc3c7;
+    }
+    
+    .tile-icon.wilted-plant-tile {
+        background-color: #91b496;
+    }
+    
+    .tile-icon.dead-plant-tile {
+        background-color: #2e3131;
+    }
+    
+    .tile-bag {
+        background-color: #2e3131;
+        border-radius: 5px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .tile-bag .square {
+        position: relative;
+        flex-basis: calc(20% - 10px);
+        margin: 5px;
+        box-sizing: border-box;
+    }
+    
+    .tile-bag .square::before {
+        content: '';
+        display: block;
+        padding-top: 100%;
+    }
+    
+    .tile-bag .square .tile-icon {
         position: absolute;
-        top:0;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+    }
+    
+    .board-game .help-icon {
+        background: #4d4d4d;
+        color: white;
+        height: 32px;
+        width: 32px;
+        font-size: 18px;
+        font-weight: 400;
+        border-radius: 50%;
+        padding: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+    
+    .board-game .help-icon:hover {
+        background: #2e2e2e;
+        transition: 0.5s;
+    }
+    
+    .help-page {
+        position: absolute;
+        top: 0;
         left: 0;
         width: calc(100vw - (100vw - 100%));
         min-height: 100vh;
-     }
-
-
-
-    @media only screen and (orientation:landscape) {
-        .score-row{
-            width: calc(50vw -20px);
-        }
-        .board-game{
-            margin-top: 18px;   
-        }
-
-        .tile-bag {
-            height: calc(20vh -20px);
-            width: calc(50vw -20px);
-        }
+        z-index: 1000;
+        background-color: #6c9;
+        padding: 0 20px;
+    }
     
-        .board-game-wrapper{
-            height: calc(65vh -20px);
-            width: calc(50vw -20px);
+    .help-page .help-page-content {
+        max-width: 650px;
+        margin: 0 auto;
+    }
+    
+    .help-page .close {
+        position: fixed;
+        right: 14px;
+    }
+    
+    .help-page .heading {
+        align-items: center;
+    }
+    
+    .help-page .rules-img {
+        width: 100%;
+        max-width: 330px;
+        margin-top: 1em;
+    }
+    
+    .help-page section h3:first-of-type,
+    .help-page section h2:first-of-type {
+        margin-top: 1.5em;
+    }
+    
+    .help-page section h3.selecting-a-cell-heading {
+        margin-top: 1em;
+    }
+    
+    @media (orientation: landscape) {
+        .board-game .tile-icon {
+            font-size: calc(0.6em + 1vh);
+        }
+        .score-row {
+            width: calc(75vh -73.33px);
+        }
+        .board-game-wrapper {
+            height: calc(75vh -73.33px);
+            width: calc(75vh -73.33px);
+        }
+        .tile-bag {
+            height: calc(15vh - 14.66px);
+            width: calc(75vh -73.33px);
         }
     }
-}
-
+    
+    @media (orientation:portrait) {
+        .board-game {
+            margin-top: 40px;
+        }
+        .board-game .tile-icon {
+            font-size: calc(0.6em + 1vw);
+        }
+        .score-row {
+            width: calc(75vw -73.33px);
+        }
+        .board-game-wrapper {
+            height: calc(75vw -73.33px);
+            width: calc(75vw -73.33px);
+        }
+        .tile-bag {
+            height: calc(15vw - 14.66);
+            width: calc(75vw -73.33px);
+        }
+    }
+    
+    @media(max-width:991px) {
+        .help-page {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: calc(100vw - (100vw - 100%));
+            min-height: 100vh;
+        }
+    }
+    
+    @media(max-width:767px) {
+        @media (orientation: landscape) {
+            .tile-bag .square {
+                position: relative;
+                flex-basis: calc(20% - 2px);
+                margin: 1px;
+                box-sizing: border-box;
+            }
+            .score-row {
+                width: calc(75vh -60px);
+            }
+            .board-game-wrapper {
+                height: calc(75vh -60px);
+                width: calc(75vh -60px);
+            }
+            .tile-bag {
+                height: calc(15vh -12px);
+                width: calc(75vh -60px);
+            }
+        }
+        @media (orientation:portrait) {
+            .score-row {
+                width: calc(100vw -60px);
+            }
+            .board-game-wrapper {
+                height: calc(100vw -60px);
+                width: calc(100vw -60px);
+            }
+            .tile-bag {
+                height: calc(20vw -12px);
+                width: calc(100vw -60px);
+            }
+        }
+    }
