--- a/src/app/content/css/board-game-help.css
+++ b/src/app/content/css/board-game-help.css
@@ -3,8 +3,7 @@
     top: 0;
     left: 0;
     width: calc(100vw - (100vw - 100%));
-    min-height: 100vh;
-    ;
+    overflow-x: hidden;
     background-color: #6c9;
     padding: 0 20px;
     transition: 0.2s;
@@ -17,7 +16,8 @@
 
 .help-page.hide {
     opacity: 0;
-    z-index: -999
+    z-index: -999;
+    height: 0;
 }
 
 .help-page .help-page-content {
@@ -47,14 +47,4 @@
 
 .help-page section h3.selecting-a-cell-heading {
     margin-top: 1em;
-}
-
-@media(max-width:991px) {
-    .help-page {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: calc(100vw - (100vw - 100%));
-        min-height: 100vh;
-    }
 }
