--- a/src/content/css/diamond-copy-challenge.css
+++ b/src/content/css/diamond-copy-challenge.css
@@ -40,7 +40,7 @@
 
 @keyframes item1-flash {
     from {
-        background: #E74C3C;
+        background:  var(--diamond-red);
     }
     to {
         background: red;
@@ -49,7 +49,7 @@
 
 @keyframes item2-flash {
     from {
-        background: #81CFE0;
+        background: var(--diamond-blue);
     }
     to {
         background: blue;
@@ -58,7 +58,7 @@
 
 @keyframes item3-flash {
     from {
-        background: #66CC99;
+        background: var(--diamond-green);
     }
     to {
         background: green;
@@ -67,7 +67,7 @@
 
 @keyframes item4-flash {
     from {
-        background: #4D4D4D;
+        background:  var(--diamond-black);
     }
     to {
         background: black;
