--- a/src/content/css/diamond-palette.css
+++ b/src/content/css/diamond-palette.css
@@ -14,19 +14,19 @@
 }
 
 .diamond-holder-pallete .red {
-    background: #E74C3C;
+    background:  var(--diamond-red);
 }
 
 .diamond-holder-pallete .blue {
-    background: #81CFE0;
+    background: var(--diamond-blue);
 }
 
 .diamond-holder-pallete .green {
-    background: #66CC99;
+    background:var(--diamond-green);
 }
 
 .diamond-holder-pallete .black {
-    background: #4D4D4D;
+    background:  var(--diamond-black);
 }
 
 .selected {
