--- a/src/content/css/diamond-sorter.css
+++ b/src/content/css/diamond-sorter.css
@@ -12,22 +12,22 @@
 }
 
 .diamond-sorter .red {
-    background: #E74C3C;
+    background: var(--diamond-red);
     opacity: 0.6;
 }
 
 .diamond-sorter .blue {
-    background: #81CFE0;
+    background:var(--diamond-blue);
     opacity: 0.6;
 }
 
 .diamond-sorter .green {
-    background: #66CC99;
+    background:var(--diamond-green);
     opacity: 0.7;
 }
 
 .diamond-sorter .black {
-    background: #4D4D4D;
+    background:var(--diamond-black);
     opacity: 0.6;
 }
 
