--- a/src/content/css/globe.css
+++ b/src/content/css/globe.css
@@ -1,19 +1,39 @@
+
+
 .globe{
     height: 40vh;
     width: 40vh;
     border: 2px solid black;
+    background-color: orange;
+    position: relative;
+    overflow: hidden;
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    animation:sky-color-change;
+    animation-timing-function:linear;
+    animation-iteration-count: infinite;
+    animation-duration: 20s;
 }
 .tree{
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-end;
+    position: relative;
+    z-index: 1;
 }
 
 .tree .tree-top,.tree .tree-body{
-    background-color: green;
+    background-color: #1e824c;
     height: 20%;
+    animation: wind-blown;
+    animation-timing-function:linear;
+    animation-iteration-count: infinite;
+    animation-duration: 3s;
 }
 
 .tree .tree-top{
@@ -25,7 +45,201 @@
 }
 
 .tree .tree-trunk{
-    background-color: brown;
+    background-color: #96281b;
     height:40%;
-    width: 25%;
+    width: 20%;
+    position:relative
 }
+
+/* .cloud{
+    top:10%;
+    position: absolute;
+    background: white;
+    height: 15%;
+    width: 50%;
+    animation: move-cloud;
+    animation-timing-function:linear;
+    animation-iteration-count: infinite;
+    animation-duration: 5s;
+} */
+
+.cloud{
+    opacity: 0.8;
+    top:20%;
+    position: absolute;
+    height: 15%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation: move-cloud;
+    animation-timing-function:linear;
+    animation-iteration-count: infinite;
+    animation-duration: 10s;
+}
+
+.cloud .cloud-top{
+    background: white;
+    height: 30%;
+    width: 50%;
+}
+
+.cloud .cloud-bottom{
+    background: white;
+    height: 30%;
+    width: 60%;
+}
+
+.cloud .cloud-body{
+    background: white;
+    height: 70%;
+    width: 100%;
+}
+
+.sun{
+    background: yellow;
+    height: 20%;
+    width:20%;
+    position: absolute;
+    bottom:-20%;
+    left:-20%;
+    animation: sun-rise;
+    animation-timing-function:linear;
+    animation-iteration-count: infinite;
+    animation-duration: 20s;
+}
+
+.moon{
+    background: gray;
+    height: 20%;
+    width:20%;
+    position: absolute;
+    bottom:-20%;
+    left:-20%;
+    animation: moon-rise;
+    animation-timing-function:linear;
+    animation-iteration-count: infinite;
+    animation-duration: 20s;
+    animation-delay: 11s;
+}
+
+.ground{
+    height: 10%;
+    width: 100%;
+    background-color: green;
+    position: relative;
+    z-index: 1;
+}
+
+
+@keyframes sky-color-change{
+    0%{
+        background-color: orange;
+    }
+    5%{
+        background-color: orange;
+    }
+    25%{
+        background-color:  #29C5FF;
+    }
+    45%{
+        background-color: orange;
+    }
+    50%{
+        background-color: orange;
+    }
+    65%{
+        background-color: black;
+    }
+    85%{
+        background-color: black;
+    }
+    100%{
+        background-color: orange;
+    }
+}
+
+/* @keyframes sky-color-change{
+    0%{
+        background-color: orange;
+    }
+    25%{
+        background-color: #29C5FF;
+    }
+    50%{
+        background-color: orange;
+    }
+    75%{
+        background-color: black;
+    }
+    100%{
+        background-color: orange;
+    }
+} */
+
+@keyframes move-cloud{
+    0%{
+        left: -50%;
+    }
+    98%{
+        width: 50%;
+        left: 100%;
+    }
+    99%{
+        width: 0;
+        left: 100%;
+    }
+    100%{
+        width: 0;
+        left: 0;
+    }
+}
+
+@keyframes wind-blown{
+    33%{
+        left: 0.5%;
+        border:1% solid #1e824c;
+        position: relative;
+    }
+    66%{
+        left:0;
+        position: relative;
+    }
+    100%{
+        right: 0.5%;
+        border:1% solid #1e824c;
+        position: relative;
+    }
+}
+
+@keyframes sun-rise{
+    25%{
+        bottom:70%;
+        left: 40%;
+    }
+    50%{
+        bottom:-20%;
+        left: 120%;
+    }
+    100%{
+        bottom:-20%;
+        left: 0;
+    }
+}
+
+
+@keyframes moon-rise{
+    25%{
+        bottom:70%;
+        left: 40%;
+    }
+    50%{
+        bottom:-20%;
+        left: 120%;
+    }
+    100%{
+        bottom:-20%;
+        left: 0;
+    }
+}
+
