--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -8,6 +8,7 @@
 }
 
 :root{
+    --default-background: #e4e9ed;
     --diamond-red:#E74C3C;
     --diamond-blue: #81CFE0;
     --diamond-green:#66CC99;
@@ -15,7 +16,7 @@
 }
 
 body {
-    background: #e4e9ed;
+    background:var(--default-background);
     font-family: SpaceGrotesk, sans-serif;
     margin: 0;
     font-size: 18px;
