--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -7,16 +7,16 @@
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --default-background: #e4e9ed;
-    --diamond-red:#E74C3C;
+    --diamond-red: #E74C3C;
     --diamond-blue: #81CFE0;
-    --diamond-green:#66CC99;
-    --diamond-black:#4D4D4D;
+    --diamond-green: #66CC99;
+    --diamond-black: #4D4D4D;
 }
 
 body {
-    background:var(--default-background);
+    background: var(--default-background);
     font-family: SpaceGrotesk, sans-serif;
     margin: 0;
     font-size: 18px;
@@ -74,6 +74,10 @@ section p:first-of-type {
     justify-content: center;
     align-items: center;
     height: calc(100vh - 56px)
+}
+
+.center-text {
+    text-align: center;
 }
 
 .content-wrapper {
