--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -135,6 +135,24 @@ section p:first-of-type {
     background-color: #b94133;
 }
 
+.next {
+   
+    display: block;
+    text-decoration: none;
+    font-weight: bold;
+    color: #24252a;
+    text-align: center;
+}
+
+.next:hover {
+    transition: 1s;
+    cursor: pointer;
+    color: #bfbfbf;
+}
+
+.next h1{
+    margin-top: 4em;
+}
 @media(max-width:767px) {
     body {
         font-size: 16px;
