--- a/src/content/css/blob.css
+++ b/src/content/css/blob.css
@@ -1,17 +1,129 @@
-.blob{
-    height: 300px;
-    width: 300px;
-    background: #e74c3c;
-    transition: 1s;
+.blob-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 1fr;
+    justify-items: center;
+    align-items: center;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    font-size: 1rem;
+    transition: 4s;
 }
 
-.round{
+.blob-wrapper.align-straight{
+  transition: 4s;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+.blob-wrapper .traingle{
+    grid-column-start: 2; 
+    grid-row-start: 2;
+}
+
+.blob-wrapper.spin{
+    animation: spining;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-duration: 2s;
+}
+
+.blob-wrapper.round .blob{
     transition: 1s;
     border-radius: 50%;
 }
 
-.moved{
-    transition: 11s;
-    position: relative;
-    right: 500px;
+.blob-wrapper.round.color-transition .blob{
+    animation: color-transistions;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-duration: 4s;
+  }
+
+
+.blob{
+    height: 10em;
+    width: 10em;
+    background:var(--diamond-red);;
+    transition: 1s;
+}
+
+.blob-small{
+    height: 5em;
+    width: 5em;
+}
+
+.blob-small.hidden{
+    transition: 2s;
+    opacity:1;
+}
+
+
+.blob-small.show{
+    transition: 2s;
+    opacity:1;
+}
+
+.triangle-topleft {
+    width: 0;
+    height: 0;
+    border-top: 5em solid var(--diamond-red);
+    border-right: 5em solid transparent;
+  }
+
+  .triangle-topright {
+    width: 0;
+    height: 0;
+    border-top: 5em solid var(--diamond-blue);
+    border-left: 5em solid transparent;
+  }
+
+  .triangle-bottomleft {
+    width: 0;
+    height: 0;
+    border-bottom: 5em solid var(--diamond-black);
+    border-right: 5em solid transparent;
+  }
+
+  .triangle-bottomright {
+    width: 0;
+    height: 0;
+    border-bottom: 5em solid var(--diamond-green);;
+    border-left: 5em solid transparent;
+  }
+
+  .triangle.hidden{
+    transition: 2s;
+    opacity:0;
+  }
+
+  .triangle.show{
+    transition: 2s;
+    opacity:1;
+  }
+
+#moved{
+   transition: 1s;
+}
+
+
+@keyframes spining{
+    0%  {-webkit-transform: rotate(0deg);}
+    100% {-webkit-transform: rotate(360deg);}   
+}
+
+@keyframes color-transistions{
+    20%  {background: var(--diamond-red)}
+    40% {background: var(--diamond-blue)}   
+    60% {background: var(--diamond-black)}   
+    80% {background: var(--diamond-green)}   
+    100%  {background: var(--diamond-red)}
+}
+
+@media(max-width:767px) {
+  .blob-wrapper{
+    column-gap:  0.5rem;
+    row-gap: 0.5rem;
+    font-size:  0.5rem;
+}
 }
