--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -62,6 +62,11 @@ section p:first-of-type {
     margin: 0 auto;
 }
 
+.wrap{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .center-wrapper {
     display: flex;
     align-items: center;
@@ -93,6 +98,11 @@ section p:first-of-type {
 .space-between-wrapper {
     display: flex;
     justify-content: space-between;
+}
+
+.full-page{
+    height: 100vh;
+    width: 100vw;
 }
 
 .padding-gapper-2 {
